# HCL_Assignment

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
data/: claims_history.json  limits.json  sample_claims.json  travel_policy.md
outputs/: CLM-001.json  CLM-002.json  CLM-003.json  CLM-004.json  CLM-005.json
src/: __init__.py  agent.py  api.py  cli.py  models.py  policy_store.py  tools.py  validator.py
tests/: test_agent_eval.py  test_validator.py
