[project]
name = "travel-reimbursement-agent"
version = "0.1.0"
description = "AI-assisted travel reimbursement approval agent (LangGraph + LangChain + Groq)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1.3,<2",
    "langchain-groq>=1.1",
    "langchain-community>=0.4",
    "langchain-text-splitters>=1.0",
    "langchain-huggingface>=0.3",
    "faiss-cpu>=1.8",
    "sentence-transformers>=3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
